# index-one

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  ROADMAP.md  SECURITY.md  VISION.md
.github/workflows/: attack-artifact.yml  benchmarks.yml  python-ci.yml  rust-ci.yml  security.yml
benchmarks/: Cargo.toml  README.md
benchmarks/benches/: composed_verify.rs  hop_size.rs  verify_latency.rs  witness_ops.rs
clients/checkpoint/: Cargo.toml
clients/checkpoint/src/: lib.rs
clients/revocation-http/: Cargo.toml
clients/revocation-http/src/: lib.rs
clients/wasm-verifier/: .gitignore  Cargo.toml  README.md
clients/wasm-verifier/demo/: index.html
clients/wasm-verifier/src/: lib.rs
conformance/: Cargo.toml  README.md
conformance/src/: main.rs
core/: Cargo.toml
core/attestation/: Cargo.toml
core/attestation/src/: lib.rs
core/chain/: Cargo.toml
core/chain/src/: lib.rs
core/chain/tests/: proptest_soundness.rs
core/cli/: Cargo.toml
core/cli/src/: main.rs
core/crypto/: Cargo.toml
core/crypto/src/: ed25519.rs  hybrid.rs  lib.rs  mldsa.rs
core/crypto/tests/: proptest_soundness.rs
core/revlog/: Cargo.toml
core/revlog/src/: lib.rs
core/revmap/: Cargo.toml
core/revmap/src/: lib.rs
core/revocation/: Cargo.toml
core/revocation/src/: lib.rs
core/verifier/: Cargo.toml
core/verifier/src/: lib.rs
core/verifier/tests/: pq_end_to_end.rs  proptest_soundness.rs
core/witness/: Cargo.toml
core/witness/src/: lib.rs
core/witness/tests/: proptest_soundness.rs
dataroom/: AUDIT_SCOPE.md  DECK_OUTLINE.md  DESIGN_PARTNER_OUTREACH.md  INDEXONE_BRIEF.md  README.md
demos/: e2e_demo.py
docs/: BENCHMARKS.md  CLAIM_TO_ATTACK.md  REFERENCE.md  RESEARCH_VERIFICATION.md  REVOCATION_TRANSPARENCY.md  SPEC.md  VERIFIER_AUDIT.md
exploits/: Cargo.toml  README.md
exploits/real_aip/: README.md  requirements.in  requirements.lock.txt  requirements.txt  sidebyside.py
exploits/real_ap2/: README.md  requirements.txt  sidebyside.py
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: fuzz_attestation_verify.rs  fuzz_chain_verify.rs  fuzz_inclusion_proof.rs  fuzz_receipt.rs
integrations/: README.md  pyproject.toml
integrations/src/integrations/: __init__.py
integrations/src/integrations/ap2/: __init__.py  adapter.py  sdjwt_vc.py
integrations/src/integrations/attack/: __init__.py  harness.py  poc_cross_org_chain.py
integrations/src/integrations/mcp/: __init__.py  hooks.py
integrations/tests/: test_ap2_adapter.py  test_ap2_sdjwt.py  test_attack_harness.py  test_mcp_hooks.py
landing-page/site/: index.html
sdk/python/: README.md  pyproject.toml
sdk/python/src/indexone/: __init__.py  client.py
sdk/python/tests/: test_client.py
sdk/typescript/: README.md  package-lock.json  package.json  tsconfig.json
sdk/typescript/src/: index.ts
sdk/typescript/test/: index.test.ts
services/revocation-log/: Cargo.toml  README.md
services/revocation-log/src/: lib.rs  main.rs
services/witness/: Cargo.toml  README.md
services/witness/src/: lib.rs  main.rs
