[package]
name = "indexone-benchmarks"
version = "0.0.1"
edition = "2021"
publish = false
description = "Real benchmarks for IndexOne: Chain::verify and composed verify()/verify_threshold latency, per-hop wire size, and witness log operations (append, inclusion/consistency proofs, signed tree heads)."

[dependencies]
# Path deps into /core.
indexone-chain = { path = "../core/chain" }
indexone-crypto = { path = "../core/crypto" }
indexone-witness = { path = "../core/witness" }
indexone-attestation = { path = "../core/attestation" }
indexone-verifier = { path = "../core/verifier" }
serde_json = "1"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "verify_latency"
harness = false

[[bench]]
name = "hop_size"
harness = false

[[bench]]
name = "composed_verify"
harness = false

[[bench]]
name = "witness_ops"
harness = false
