[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "index-one-integrations"
version = "0.0.1"
description = "Rail integrations (AP2, MCP) and the cross-org attribution attack POC for index-one."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "TODO" } # TODO: confirm MIT vs Apache-2.0, see /LICENSE
authors = [{ name = "index-one" }]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "ruff>=0.5",
    "black>=24",
    "mypy>=1.10",
]

[tool.hatch.build.targets.wheel]
packages = ["src/integrations"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
strict = true
disallow_untyped_defs = true
