[package]
name = "indexone-attestation"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true
description = "Independent completion attestation: replaces AIP's self-reported completion block with a proof signed by someone other than the executing agent (CLAUDE.md §6 deliverable #2)."

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
indexone-crypto = { workspace = true }
indexone-chain = { workspace = true }
indexone-witness = { workspace = true }

[dev-dependencies]
