[package]
name = "indexone-chain"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true
description = "Append-only signed delegation-block chain (built on Biscuit-style datalog capability tokens). Interfaces only, no crypto implemented yet."

[dependencies]
serde.workspace = true
thiserror.workspace = true
indexone-crypto = { path = "../crypto" }

[dev-dependencies]
