[package]
name = "indexone-chain"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true
description = "Append-only signed delegation-block chain: cryptographically-bound, scope-narrowing capability tokens with cross-org attribution."

[dependencies]
serde.workspace = true
serde_json.workspace = true
serde_jcs.workspace = true
thiserror.workspace = true
blake3.workspace = true
indexone-crypto = { workspace = true }

[dev-dependencies]
