[package]
name = "indexone-crypto"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true
description = "Signature-scheme abstraction for index-one capability tokens (Ed25519 today, ML-DSA/hybrid later). Interfaces only, no crypto implemented yet."

[dependencies]
serde.workspace = true
thiserror.workspace = true

[dev-dependencies]
