[package]
name = "indexone-revocation"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true
description = "Short-TTL + transparency-log revocation for capability-token chains; survives partial-chain compromise (keyless RevocationIds)."

[dependencies]
serde.workspace = true
thiserror.workspace = true
blake3.workspace = true
indexone-chain = { workspace = true }
indexone-crypto = { workspace = true }

[dev-dependencies]
