[package]
name = "indexone-witness"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true
description = "Cross-org transparency log: Merkle roots + inclusion proofs that make action OMISSION detectable. The headline seam (CLAUDE.md §6)."

[dependencies]
serde.workspace = true
serde_json.workspace = true
serde_jcs.workspace = true
thiserror.workspace = true
blake3.workspace = true
indexone-crypto = { workspace = true }

[dev-dependencies]
