[package]
name = "indexone-revocation-log-service"
version = "0.0.1"
edition = "2021"
publish = false
description = "The hosted IndexOne revocation log — signs and serves a SignedRevocationSnapshot over HTTP (the publisher side of the remote-revocation loop consumed by indexone-revocation-http). Reuses indexone-revocation for every cryptographic operation."

# Standalone package (like /services/witness): NOT a member of the /core
# workspace, so axum/tokio never enter the lean, async-free core. TLS is
# deliberately not enabled (terminate at a proxy) to keep `cargo audit` off the
# unmaintained `ring` advisory.
[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"
indexone-revocation = { path = "../../core/revocation" }
indexone-revlog = { path = "../../core/revlog" }
indexone-revmap = { path = "../../core/revmap" }
indexone-crypto = { path = "../../core/crypto" }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
# The other half of the loop: prove a snapshot this service signs is fetched and
# checked end-to-end by the real HTTP transport.
indexone-revocation-http = { path = "../../clients/revocation-http" }

[[bin]]
name = "indexone-revocation-log-service"
path = "src/main.rs"

[lib]
name = "indexone_revocation_log_service"
path = "src/lib.rs"
